# OnlineGGO

./: .gitignore  .gitmodules  LICENSE  README.md  build_container.sh  init_submodule.sh
CMAES/: .gitignore  .gitmodules  CMakeLists.txt  pybind11  requirements.txt  run_py_driver.py
CMAES/RHCR/: CMakeLists.txt
CMAES/RHCR/inc/: BasicSystem.h  KivaGraph.h  KivaSystem.h  TaskDistGenerator.h  WarehouseSimulator.h
CMAES/RHCR/src/: BasicGraph.cpp  BasicSystem.cpp  KivaGraph.cpp  KivaSystem.cpp  PBS.cpp  SIPP.cpp  SingleAgentSolver.cpp  TaskDistGenerator.cpp  WarehouseSimulation.cpp  WarehouseSimulator.cpp
CMAES/WPPL/: run_py_driver.py  run_py_sim.py
CMAES/WPPL/configs/: pibt_default_no_rot.json
CMAES/WPPL/src/: MAPFPlanner.cpp
CMAES/config/competition/: CMA_ES_PIBT_32x32_random-map_150-agents.gin  CMA_ES_PIBT_32x32_random-map_400-agents.gin  CMA_ES_PIBT_den312d_1200-agents.gin  CMA_ES_PIBT_empty-48-48_1000-agents.gin  CMA_ES_PIBT_game-ost003d-194-194_6000-agents.gin  CMA_ES_PIBT_maze-32-32-4_400-agents.gin  CMA_ES_PIBT_random-64-64-8_1500-agents.gin  CMA_ES_PIBT_room-64-64-8_1500-agents.gin  CMA_ES_PIBT_warehouse-33x36_150-agents.gin  CMA_ES_PIBT_warehouse-33x36_400-agents.gin  base.gin  test_env.gin
CMAES/config/hpc/: run_cpu.sh
CMAES/config/traffic_mapf/: base.gin  dense520d.gin  empty.gin  empty_dist.gin  empty_dist_min.gin  ggo_33x36.gin  ggo_33x36_dist.gin  ggo_33x36_lns.gin  ggo_33x36_lns_dist.gin  ggo_93x91.gin  maze.gin  ost.gin  ost_dist.gin  ost_dist_lns.gin  ost_downsample.gin  ost_lns.gin  paris.gin  random.gin  random_dist.gin  random_dist_k5.gin  random_dist_min.gin  random_dist_sigma1.5.gin  random_dist_sigma1.gin  random_lns.gin  room.gin  room_dist.gin  room_large.gin  room_lns.gin  sortation_60x100.gin  sortation_medium.gin  sortation_small.gin  sortation_small_ab_input.gin  sortation_small_dist.gin  sortation_small_dist_sigma.gin  sortation_small_lns.gin  sortation_small_narrow.gin  warehouse.gin  warehouse_30x120.gin  warehouse_60x100.gin  warehouse_60x100_dist_mixed.gin  (+4 more)
CMAES/env_search/: main.py  manager.py  test.py  train_rl.py
CMAES/env_search/analysis/: load_from_reload.py  map_process.py  tile_usage.py  visualize_env.py
CMAES/env_search/competition/: competition_manager.py  competition_result.py  config.py  eval.py  eval_offline_in_online.py  eval_to_log.py  gen_vis_video.py  module.py  multi_process_eval.py  parse_tasks_time.py  run.py  vis.py
CMAES/env_search/il_modules/: collect_data.py  config.py  data_provider.py  eval.py  train_bc.py
CMAES/env_search/iterative_update/: __init__.py
CMAES/env_search/learn2follow/: config.py  learn2follow_manager.py  module.py  result.py  run.py
CMAES/env_search/rl_modules/: config.py  features_extractors.py
CMAES/env_search/traffic_mapf/: config.py  eval.py  eval_to_log.py  extract_offline_map_weights.py  module.py  multi_process_eval.py  parse_eval.py  parse_multi_process_eval.py  plot.py  result.py  run.py  traffic_mapf_manager.py  utils.py  vis.py
CMAES/env_search/utils/: __init__.py  logging.py  plot_utils.py  task_generator.py  (+1 more)
CMAES/learn2follow/: .gitignore  example.py
CMAES/scripts/: my_run_local.sh  run_local.sh  run_local_old.sh  run_slurm.sh  run_slurm_psc_EM_local.sh  run_slurm_psc_RM_local.sh  visualize_env.sh
Guided-PIBT/: .gitignore  README.md  compile.sh  eval.sh  example.cpp  mem_usage.py  multi_process_eval.py  run.sh  run_period_on.py  run_py_driver.py  vis_agent_paths.py  vis_paths_usage.py
Guided-PIBT/guided-pibt/: CMakeLists.txt
Guided-PIBT/guided-pibt/benchmark-lifelong/maps/: lak303d_downsample.map  ost003d_downsample.map  ost003d_downsample_repaired.map  sortation_60x100.map  sortation_60x100_wide.map  sortation_small_kiva.map  sortation_small_narrow.map  warehouse_30x120.map  warehouse_60x100.map  warehouse_60x100_kiva.map  warehouse_small_kiva.map  warehouse_small_narrow.map  warehouse_small_narrow_kiva.map
Guided-PIBT/guided-pibt/inc/: CompetitionSystem.h  Grid.h  MAPFPlanner.h  SharedEnv.h  TaskDistGenerator.h  analysis.h  period_on_sim.h
Guided-PIBT/guided-pibt/src/: CompetitionSystem.cpp  Grid.cpp  MAPFPlanner.cpp  TaskDistGenerator.cpp  analysis.cpp  period_on_sim.cpp  py_driver.cpp
Guided-PIBT/guided-pibt/traffic_mapf/: CMakeLists.txt  Memory.h  TrajLNS.h  Types.h  flow.cpp  flow.hpp  network.cpp  network.hpp  pibt.cpp  search.cpp  search.hpp  search_node.h  utils.cpp  utils.hpp
Guided-PIBT/map_scripts/: downsample_map.py  load_ggo_map.py  maps.py  save_ggo_map.py  test_read_map.py
Guided-PIBT/run_scripts/: run_offline_single.py  run_online_single.py
singularity/: ubuntu_onlineGGO.def
(+219 files in other folders)
